# agent-repl-kit

./: .gitignore  Cargo.toml  README.md
crates/agent-repl/: Cargo.toml
crates/agent-repl-core/: Cargo.toml
crates/agent-repl-core/src/: approval.rs  event.rs  lib.rs  palette.rs  question.rs  theme.rs  tools.rs
crates/agent-repl/examples/: demo.rs
crates/agent-repl/src/: app.rs  approval.rs  decorations.rs  gallery.rs  handle.rs  lib.rs  markdown.rs  mascot.rs  question.rs  spinner.rs  stream.rs  style.rs  tasks.rs  wrap.rs
crates/agent-repl/src/blocks/: bodies.rs  frame.rs  mod.rs  msg.rs  tool.rs
crates/agent-repl/src/composer/: mod.rs  render.rs  state.rs
crates/agent-repl/tests/: composer.rs  mascot.rs  question.rs  render.rs
docs/: Agent REPL.html  DESIGN_AND_USAGE.md
docs/repl/: app.jsx  blocks.jsx  data.jsx  input.jsx  markdown.jsx  tokens.jsx
